--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start:server": "cd server && npm run start",
     "start:tv-client": "cd tv-client && npm start",
+    "start:mobile-app": "cd mobile-app && npm run ios",
     "start": "concurrently \"npm run start:server\" \"npm run start:tv-client\""
   }
 }
